syntax = "proto3";

package agents;

message ProtoMessage {
      string message = 1;
}
message NestingProtoMessage {
      string message = 1;
      ProtoMessage nested = 2;
}